# MGA-YOLO

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG_AUG_MASK.md  README.md  changelog.md  pyproject.toml  pytest.ini
MGA_YOLO/train_mga_yolo/: args.yaml
assets/notes/: research_plan.md
cli/: __init__.py  mga_ckpt.py  mga_train.py  plt.py  ultra_train.py
configs/data/: data.yaml  mga_data.yaml
configs/hyperparams/: cbam_defaults.yaml  defaults.yaml  eca_defaults.yaml  mga_defaults.yaml  spade_defaults.yaml  ultra_defaults.yaml
configs/models/: yolov8_cbam.yaml  yolov8_eca.yaml  yolov8_maskeca.yaml  yolov8_mga.yaml  yolov8_seg_heads.yaml  yolov8_spade.yaml  yolov8_test_segment_heads.yaml
mga_yolo/: __init__.py
mga_yolo/cfg/: defaults.py  mga_config.yaml
mga_yolo/cli/: mga_ckpt.py  mga_train.py  predict.py  train.py
mga_yolo/data/: dataset.py  kfold_splitter.py
mga_yolo/engine/: __init__.py  base_yolo_trainer.py  checkpoint.py  inference.py  model.py  predict.py  train.py  trainer.py  val.py
mga_yolo/model/: __init__.py  checkpoint.py  model.py  trainer.py  validator.py
mga_yolo/models/: hooks.py
mga_yolo/nn/: cbam.py  mga_cbam.py
mga_yolo/nn/losses/: README.md  segmentation.py
mga_yolo/nn/modules/: README.md  __init__.py  masked_cbam.py  masked_eca.py  masked_spade.py  probmaskgater.py  seg.py  segmentation.py
mga_yolo/scripts/: __init__.py  exp_cfg.yaml  performance_comparison.py
mga_yolo/utils/: dataloader.py  env.py  mask_downsample.py  mask_io.py  mask_utils.py
mga_yolo/utils/plotting/: compare_losses.yaml  compare_mask_methods.yaml  compare_models.yaml  example_config.yaml  mask_process_visualized.py  mask_showcase_ds.py  mask_showcase_precomputed.py  model_comparison.py  pareto_performance_size.py
mga_yolo/utils/plotting/configs/: compare_mask_methods.yaml  compare_models.yaml  performance_size.yaml
tests/: m.py  performance.py  plt.py  test_mga_basic.py  test_mga_minimal_ckpt_loader.py  test_mga_seg_loss.py  test_mga_train.py  test_model_info_configs.py  test_plot_results.py
tools/: README.md
tools/cli/: ultra_train_fm.py  val.py
tools/configs/: ultra_data.yaml  ultra_defaults.yaml
tools/engine/: config_env.py
tools/engine/trainers/: base_fm_trainer.py
tools/engine/validators/: base_fm_validator.py
tools/scripts/: ultralytics_base_comparison.py
