[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
authors = [
  {name = "Mario Pascual González", email = "mpascual@uma.es"},
]
dependencies = [

]
description = ""
name = "MGA_YOLO"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1"

[project.urls]
Homepage = "https://github.com/MarioPasc/MGA-YOLO"



[tool.setuptools.packages.find]
include = ["mga_yolo"]

[tool.setuptools.package-data]
"ICA_Detection.external.ultralytics" = ["*"]

