[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MGA_YOLO"
version = "0.1"
description = "Mask-Guided-Attention YOLO for coronary-stenosis detection"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  {name = "Mario Pascual González", email = "mpascual@uma.es"},
]

# ────────────── Runtime deps ──────────────
dependencies = [
  "torch>=2.2",       
  "typer>=0.12",
  "pyyaml>=6.0",
  "pillow>=10.0",
  "rich>=13.0",
  "scienceplots",

  "numpy>=1.23.0",
  "matplotlib>=3.3.0",
  "opencv-python>=4.6.0",
  "requests>=2.23.0",
  "scipy>=1.4.1",
  "torch>=1.8.0,!=2.4.0; sys_platform == 'win32'", # Windows CPU errors w/ 2.4.0 https://github.com/ultralytics/ultralytics/issues/15049
  "torchvision>=0.9.0",
  "tqdm>=4.64.0", # progress bars
  "psutil", # system utilization
  "py-cpuinfo", # display CPU info
  "pandas>=1.1.4",
  "ultralytics-thop>=2.0.0", # FLOPs computation https://github.com/ultralytics/thop
]

[project.urls]
Homepage = "https://github.com/MarioPasc/MGA-YOLO"

# NOTE: We vendor a modified copy of the ultralytics package (top-level 'ultralytics/' directory).
# To ensure it is installed together with MGA_YOLO (and preferred on sys.path over any PyPI ultralytics),
# we include it explicitly below instead of declaring a dependency on upstream 'ultralytics'.
# Recommend installing in a fresh virtualenv to avoid conflicts with an already installed ultralytics wheel.

# ────────────── Setuptools discovery ──────

[tool.setuptools.packages.find]
# Discover our main package and the vendored top-level 'ultralytics' package
include = [
  "mga_yolo",
  "mga_yolo.*",
  "ultralytics",
  "ultralytics.*",
  "cli",
  "cli.*",
]

[tool.setuptools.package-dir]
ultralytics = "mga_yolo/external/ultralytics/ultralytics"

[tool.setuptools.package-data]
"mga_yolo.external.ultralytics" = ["*"]
"ultralytics" = ["*"]

[project.scripts]
mga_train = "cli.mga_train:app"
